# pipe_test

sprotocol-encrypt-codex4.5/: CMakeLists.txt
sprotocol-encrypt-codex4.5/src/: sprotocol_core.c  sprotocol_crypto.c  sprotocol_frame.c  sprotocol_internal.h  sprotocol_pairing.c
sprotocol-encrypt-codex4.5/tests/: test_sprotocol.c
sprotocol-encrypt-gemini-3.1/: CMakeLists.txt  test_psa.c
sprotocol-encrypt-gemini-3.1/src/: sprotocol.c  sprotocol_crc.c  sprotocol_crypto.c  sprotocol_crypto.h
sprotocol-encrypt-gemini-3.1/test/: test_main.c  test_udp.c  test_udp.h
sprotocol-encrypt-kimi-2.5/: CMakeLists.txt
sprotocol-encrypt-kimi-2.5/src/: blacklist.c  comm.c  core.c  crypto.c  device.c  frame.c  heartbeat.c  pairing.c  seq.c  sprotocol_internal.h
sprotocol-encrypt-kimi-2.5/tests/: main.c  test_comm.c  test_crypto.c  test_frame.c  test_pairing.c  udp_link.c  udp_link.h
sprotocol-encrypt-opus-4.6/: CMakeLists.txt
sprotocol-encrypt-opus-4.6/src/: sprotocol.c  sprotocol_crypto.c  sprotocol_frame.c  sprotocol_internal.h  sprotocol_pair.c
sprotocol-encrypt-opus-4.6/tests/: test_main.c
sprotocol-opus-4.7/: CMakeLists.txt  build.sh
sprotocol-opus-4.7/src/: sprotocol.c  sprotocol_crypto.c  sprotocol_crypto.h
sprotocol-opus-4.7/test/: test_main.c  udp_link.c  udp_link.h
sprptocol-encrypt-sonnet-4.6/: CMakeLists.txt  build.sh
sprptocol-encrypt-sonnet-4.6/include/: sprotocol.h
sprptocol-encrypt-sonnet-4.6/src/: sprotocol.c  sprotocol_crypto.c  sprotocol_crypto.h  sprotocol_internal.h
sprptocol-encrypt-sonnet-4.6/tests/: test_main.c
